--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -132,7 +132,7 @@
 								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 								<li><a href="https://www.facebook.com/pubdevs" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/pubdevs" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.instagram.com/pubdev" class="icon brands fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/pubdev" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<hr />
 						</div>
