--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -19,7 +19,7 @@
 		<meta name="Resource-type" content="Index">
 		<meta name="Revisit-after" content="60 days">
 		<meta name="robots" content="follow"> 
-		<link rel="icon" href="images/pic00.jpg">
+		<link rel="icon" href="images/icono_low.png">
 		<link rel="stylesheet" href="assets/css/salonFamas1.css" />
 		<!--Menu-->
 		<link rel="stylesheet" href="assets/css/menu.css" />
@@ -130,7 +130,7 @@
 							<h3>Siguenos en ...</h3>
 							<ul class="social">
 								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<li><a href="https://www.facebook.com/pubdevs" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/pubdev" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/pubdevs" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.instagram.com/pubdev" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
