--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -19,7 +19,7 @@
 		<meta name="Resource-type" content="Index">
 		<meta name="Revisit-after" content="60 days">
 		<meta name="robots" content="follow">
-		<link rel="icon" href="images/pic00.jpg">
+		<link rel="icon" href="images/icono_low.png">
 		<link rel="stylesheet" href="assets/css/salonFamas1.css" />
 		<!--Menu-->
 		<link rel="stylesheet" href="assets/css/menu.css" />
