--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -19,7 +19,7 @@
 		<meta name="Resource-type" content="Index">
 		<meta name="Revisit-after" content="60 days">
 		<meta name="robots" content="follow">
-		<link rel="icon" href="images/pic00.jpg">
+		<link rel="icon" href="images/icono_low.png.jpg">
 		<link rel="stylesheet" href="assets/css/eventos.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
