--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -80,31 +80,31 @@
 									<h3>Herramientas en las cuales tiene conocimiento</h3>
 									<div class="col-6 col-12-small">
 										 <select id="Back">
-										 	<option value="">Back-end</option>
-											<option value="">PHP</option>
-									  		<option value="">Python</option>
-									  		<option value="">Javascript</option>
-									  		<option value="">Typescript</option>
-									  		<option value="">Java</option>
-									  		<option value="">Ruby</option>
-									  		<option value="">C++</option>
-									  		<option value="">C</option>
-									  		<option value="">VSB(Macros Excel)</option>
-									  		<option value="">Otro</option>
+										 	<option>Back-end</option>
+											<option>PHP</option>
+									  		<option>Python</option>
+									  		<option>Javascript</option>
+									  		<option>Typescript</option>
+									  		<option>Java</option>
+									  		<option>Ruby</option>
+									  		<option>C++</option>
+									  		<option>C</option>
+									  		<option>VSB(Macros Excel)</option>
+									  		<option>Otro</option>
 									  		</select>
 									</div>
 
 									<div class="col-6 col-12-smajll">
 										 <select id="Front">
-										 	<option value="">Front-End</option>
-										 	<option value="1">HTML5</option>
-											<option value="1">Bootstrap</option>
-									  		<option value="2">CSS3</option>
-									  		<option value="3">Fundation</option>
-									  		<option value="4">Mustach</option>
-									  		<option value="5">Angular</option>
-									  		<option value="6">Material</option>
-									  		<option value="0">Otro</option>
+										 	<option>Front-End</option>
+										 	<option>HTML5</option>
+											<option>Bootstrap</option>
+									  		<option>CSS3</option>
+									  		<option>Fundation</option>
+									  		<option>Mustach</option>
+									  		<option>Angular</option>
+									  		<option>Material</option>
+									  		<option>Otro</option>
 									  		</select>
 
 									</div>
@@ -152,7 +152,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/menu.js"></script>
 			<script src="assets/js/registro.js"></script>
-
+			<script src="assets/js/sweetalert2.js"></script>
 
 	</body>
 </html>
