adm ver usuario, crear evento.
falta subir img en crear evento.

--- a/views/admcreareventos.hbs
+++ b/views/admcreareventos.hbs
@@ -18,8 +18,9 @@
       <div class="sidebar-heading"><img src="images/logo.png" alt="50" width="50"> <a href="/admpubdevindex">administrador</a></div>
       <div class="list-group list-group-flush">
         <a href="/admpubdevcreareventos" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos realizados</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Ver proximos eventos</a>
+        <a href="/admpubdevverusuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
       </div>
     </div>
     <div id="page-content-wrapper">
@@ -112,6 +113,7 @@
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/admcreareventos.js"></script>
+  <script src="assets/js/sweetalert2.js"></script>
   <script>
     $("#menu-toggle").click(function(e) {
       e.preventDefault();
