--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -60,26 +60,26 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form>
+							<form id="formulario" method="post" action="/registro/form" enctype="multipart/form-data">
 								<div class="row">
 									<div class="col-12">
-										<input type="text" name="name" id="name" placeholder="Nombre" />
+										<input type="text" name="nombre" id="name" placeholder="Nombre"/>
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="email" name="email" id="email" placeholder="Correo" />
+										<input type="email" name="correo" id="email" placeholder="Correo" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="subject" id="subject" placeholder="sobre nombre" />
+										<input type="text" name="sobrenombre" id="subject" placeholder="sobre nombre" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="password" name="pass1" id="pass1" placeholder="contraseña" />
+										<input type="password" name="contrasena1" id="pass1" placeholder="contraseña" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="password" name="pass2" id="pass2" placeholder="Confirma tu contraseña" />
+										<input type="password" name="contrasena2" id="pass2" placeholder="Confirma tu contraseña" />
 									</div>
 									<h3>Herramientas en las cuales tiene conocimiento</h3>
 									<div class="col-6 col-12-small">
-										 <select id="Back">
+										 <select id="Back" name="BackEnd">
 										 	<option>Back-end</option>
 											<option>PHP</option>
 									  		<option>Python</option>
@@ -95,7 +95,7 @@
 									</div>
 
 									<div class="col-6 col-12-smajll">
-										 <select id="Front">
+										 <select id="Front" name="FrontEnd">
 										 	<option>Front-End</option>
 										 	<option>HTML5</option>
 											<option>Bootstrap</option>
@@ -110,7 +110,7 @@
 									</div>
 
 									<div class="col-12 col-12-smajll file-upload">
-										<input id="fileup" type="file" class="file-upload " name="foto" multiple>
+										<input id="fileup" type="file" name="foto" class="file-upload " multiple>
 										<label class="file-upload icon solid fa-upload" for="fileup"> Subir Foto</label>
 									</div>
 									<div class="col-12">
@@ -118,7 +118,7 @@
 									</div>
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="button" id="btnRegistrarse" value="Registrarse" /></li>
+											<li><input type="submit" id="btnRegistrarse" value="Registrarse" /></li>
 											<li><input type="reset" value="limpiar Formulario" class="alt" /></li>
 										</ul>
 									</div>
