Correpcion de ortografia en algunas plaabras

--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -61,7 +61,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<p>Cada día contribuimos más a que existan más personas en el area de la tecnología y desarrollo de software con una visión diferente para el mundo, pensando siempre en la reducción de brechas de género, desigualdades sociales y la contribución a un mundo tecnológico con oportunidades.</p>
+								<p>Cada día contribuimos a que existan más personas en el área de la tecnología y desarrollo de software con una visión diferente para el mundo, pensando siempre en la reducción de brechas de género, desigualdades sociales y la contribución a un mundo tecnológico con oportunidades.</p>
 								<div class="grid-container">
 								  <div class="grid-item">0 <br> actividades Realizadas</div>
 								  <div class="grid-item">4 <br> Miembros Activos</div>
