--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,9 +21,9 @@
 <body>
 	<header id="header">
 	    <div class="inner">
-	        <a href="#" class="image avatar"><img src="images/logo01.png" alt="" /></a>
-	        <h1><strong>PubDev</strong>,
-	            Una comunidad de desarrollo sin animo de lucro
+	        <a href="#" class="image avatar"><img src="images/logo01.png" alt="" align="center" /></a>
+	        <h1 id="titulo_principal"><strong>PubDev</strong>,
+	            Una comunidad de desarrollo de software sin animo de lucro
 	        </h1>
 	    </div>
 	</header>
