--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -69,10 +69,10 @@
 										<input type="email" name="email" id="email" placeholder="Correo" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="text" name="subject" id="subject" placeholder="sobre nombre" />
+										<input type="text" name="subject" id="subject" placeholder="Usuario" />
 									</div>
 									<div class="col-6 col-12-small">
-										<input type="password" name="pass1" id="pass1" placeholder="contraseña" />
+										<input type="password" name="pass1" id="pass1" placeholder="Contraseña" />
 									</div>
 									<div class="col-6 col-12-small">
 										<input type="password" name="pass2" id="pass2" placeholder="Confirma tu contraseña" />
@@ -119,7 +119,7 @@
 									<div class="col-12">
 										<ul class="actions">
 											<li><input type="button" id="btnRegistrarse" value="Registrarse" /></li>
-											<li><input type="reset" value="limpiar Formulario" class="alt" /></li>
+											<li><input type="reset" value="Limpiar Formulario" class="alt" /></li>
 										</ul>
 									</div>
 								</div>
