--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -76,7 +76,7 @@
 							<table>
 								<thead>
 									<tr>
-										<th>Nmbre</th>
+										<th>Nombre</th>
 										<th>Frase</th>
 										<th>Puntos</th>
 										
