ver usuarios en dalon de la fama

--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -82,16 +82,8 @@
 										
 									</tr>
 								</thead>
-								<tbody>
-									<tr>
-										<td>Rick Sanchez</td>
-										<td>“Robot: ¿Cuál es mi propósito?
-											– Rick: Pasar la mantequilla.
-											– Robot: Oh, por Dios.
-											– Rick: Sí, bienvenido al club, amigo.”</td>
-										<td>450</td>
-										
-									</tr>
+								<tbody id="tableusuar">
+									
 								</tbody>
 								
 							</table>
@@ -106,6 +98,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/menu.js"></script>
+			<script src="assets/js/SalonDeLaFamaverusuarios.js"></script>
 
 	</body>
 </html>
