validate de imagenes form register

--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -110,7 +110,7 @@
 									</div>
 
 									<div class="col-12 col-12-smajll file-upload">
-										<input id="fileup" type="file" name="foto" class="file-upload " required multiple>
+										<input  id="fileup" type="file" accept="image/png, image/jpeg, image/jpg, image/png" name="foto" class="file-upload " required multiple>
 										<label class="file-upload icon solid fa-upload" for="fileup"> Subir Foto</label>
 									</div>
 									<div class="col-12">
