--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -6,99 +6,138 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>PubDev</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-		<meta name="author" content="Sebastian Roa Meneses">
-		<meta name="reply-to" content="Serome111@gmail.com">
-		<link rev="made" href="mailto:Serome111@gmail.com">
-		<meta name="description" content="web en desarrollo">
-		<meta name="KEYWORDS" content="palabras clave">
-		<meta name="Resource-type" content="Index">
-		<meta name="Revisit-after" content="60 days">
-		<meta name="robots" content="follow">
-		<link rel="icon" href="images/icono_low.png">
-		<link rel="stylesheet" href="assets/css/salonFamas1.css" />
-		<!--Menu-->
-		<link rel="stylesheet" href="assets/css/menu.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+
+<head>
+	<title>PubDev</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
+	<meta name="author" content="Sebastian Roa Meneses">
+	<meta name="reply-to" content="Serome111@gmail.com">
+	<link rev="made" href="mailto:Serome111@gmail.com">
+	<meta name="description" content="web en desarrollo">
+	<meta name="KEYWORDS" content="palabras clave">
+	<meta name="Resource-type" content="Index">
+	<meta name="Revisit-after" content="60 days">
+	<meta name="robots" content="follow">
+	<link rel="icon" href="images/icono_low.png">
+	<link rel="stylesheet" href="assets/css/salonFamas1.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
 		<!-- Header -->
-					<header id="header">
-						<div class="inner">
-							
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+		<header id="header">
+			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
 
-						</div>
-					</header>
+			<h1>SALÓN DE LA FAMA</h1>
+			<p>Alcanza el primer lugar del salón de la fama de PubDev</p>
+		</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="/">Inicio</a></li>
-							<li><a href="/eventos">Eventos</a></li>
-							<li><a href="">Calendario</a></li>
-							<li><a href="/salondefama">Salon de La Fama</a></li>
+		<!-- Main -->
+		<div id="main">
+
+			<nav id="nav">
+				<ul>
+					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/eventos">EVENTOS</a></li>
+					<li><a href="#">CALENDARIO</a></li>
+					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="#">PATROCINADORES</a></li>
+				</ul>
+			</nav>
+
+			<section class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Rick Sanchez.</h2>
+						</header>
+						<p style="text-align: justify;">“Robot: ¿Cuál es mi propósito? – Rick: Pasar la mantequilla. –
+							Robot: Oh, por Dios. – Rick: Sí, bienvenido al club, amigo.”</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Conocer más...</a></li>
 						</ul>
-					</nav>
-
-		<!-- Home -->
-			<article id="top" class="style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/rick.gif" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Persona del Mes <br><br><strong>Rick Sanchez</strong>.</h1>
-							</header>
-							<p>“Robot: ¿Cuál es mi propósito? – Rick: Pasar la mantequilla. – Robot: Oh, por Dios. – Rick: Sí, bienvenido al club, amigo.”</p>
-							<a href="#work" class="button large scrolly">Más...</a>
-						</div>
 					</div>
+					<span class="image"><img src="images/rick.gif" alt="" /></span>
 				</div>
-			</article>
-			<!-- Tabla -->
-			<section>
-				<div class="container">
-					<div class="container">
-						<div class="table-wrapper">
-							<table>
-								<thead>
-									<tr>
-										<th>Nmbre</th>
-										<th>Frase</th>
-										<th>Puntos</th>
-										
-									</tr>
-								</thead>
-								<tbody id="tableusuar">
-									
-								</tbody>
-								
-							</table>
-						</div>
-					</div>
-				</div>	
 			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/menu.js"></script>
-			<script src="assets/js/SalonDeLaFamaverusuarios.js"></script>
+			<!-- Content -->
+			<section id="content" class="main">
 
-	</body>
+				<h2>Listado de la fama</h2>
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th>Nombre</th>
+								<th>Frase</th>
+								<th>Puntos</th>
+							</tr>
+						</thead>
+						<tbody id="tableusuar">
+						</tbody>
+					</table>
+				</div>
+			</section>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Aliquam sed mauris</h2>
+				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
+					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
+					erat egestas velit, vitae tincidunt odio.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Contáctenos</h2>
+				<dl class="alt">
+					<dt>Dirección</dt>
+					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+					<dt>Télefono</dt>
+					<dd>(000) 000-0000 x 0000</dd>
+					<dt>Email</dt>
+					<dd><a href="#">information@untitled.tld</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/pubdev" target="_blank"
+							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/pubdev" target="_blank"
+							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+	<script src="assets/js/SalonDeLaFamaverusuarios.js"></script>
+
+</body>
+
 </html>
