--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -6,212 +6,195 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>PubDev</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-		<meta name="author" content="Sebastian Roa Meneses">
-		<meta name="reply-to" content="Serome111@gmail.com">
-		<link rev="made" href="mailto:Serome111@gmail.com">
-		<meta name="description" content="web en desarrollo">
-		<meta name="KEYWORDS" content="palabras clave">
-		<meta name="Resource-type" content="Index">
-		<meta name="Revisit-after" content="60 days">
-		<meta name="robots" content="follow">
-		<link rel="icon" href="images/icono_low.png">
-		<link rel="stylesheet" href="assets/css/eventos.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+<head>
+	<title>PubDev</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
+	<meta name="author" content="Sebastian Roa Meneses">
+	<meta name="reply-to" content="Serome111@gmail.com">
+	<link rev="made" href="mailto:Serome111@gmail.com">
+	<meta name="description" content="web en desarrollo">
+	<meta name="KEYWORDS" content="palabras clave">
+	<meta name="Resource-type" content="Index">
+	<meta name="Revisit-after" content="60 days">
+	<meta name="robots" content="follow">
+	<link rel="icon" href="images/icono_low.png">
+	<link rel="stylesheet" href="assets/css/eventos.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="stylesheet" href="assets/css/main.css" />
 
-							<!-- Logo -->
-								<a href="/" class="logo">
-									<span class="symbol"><img src="images/logo02.png" alt="" /></span><span class="title">PubDev</span>
-								</a>
+</head>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+<body class="is-preload">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-						</div>
-					</header>
+		<!-- Header -->
+		<header id="header">
+			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="/">Inicio</a></li>
-							<li><a href="/eventos">Eventos</a></li>
-							<li><a href="">Calendario</a></li>
-							<li><a href="/salondefama">Salon de La Fama</a></li>
+			<h1>EVENTOS</h1><br />
+			<p>Cada día contribuimos a que existan más personas en el area de la tecnología y desarrollo de software con
+				una visión diferente para el mundo, pensando siempre en la reducción de brechas de género, desigualdades
+				sociales y la contribución a un mundo tecnológico con oportunidades.</p>
+		</header>
+
+		<!-- Main -->
+		<div id="main">
+
+			<nav id="nav">
+				<ul>
+					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/eventos">EVENTOS</a></li>
+					<li><a href="#">CALENDARIO</a></li>
+					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="#">PATROCINADORES</a></li>
+				</ul>
+			</nav>
+
+			<section class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Histórico de eventos</h2>
+							<div class="grid-container">
+								<div class="grid-item">0 <br> Actividades realizadas</div>
+								<div class="grid-item">4 <br> Miembros activos</div>
+								<div class="grid-item">6 <br> Participantes</div>
+							</div>
+						</header>
+						<ul class="actions">
+							<li><a href="#" class="button">Conocer más...</a></li>
 						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<p>Cada día contribuimos más a que existan más personas en el area de la tecnología y desarrollo de software con una visión diferente para el mundo, pensando siempre en la reducción de brechas de género, desigualdades sociales y la contribución a un mundo tecnológico con oportunidades.</p>
-								<div class="grid-container">
-								  <div class="grid-item">0 <br> actividades Realizadas</div>
-								  <div class="grid-item">4 <br> Miembros Activos</div>
-								  <div class="grid-item">6 <br> Participantes</div>
-								</div>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Magna</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="/evento">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
 					</div>
-			</div>
+					<span class="image"><img src="images/rick.gif" alt="" /></span>
+				</div>
+			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/eventos.js"></script>
+			<section id="content" class="tiles main">
+				<article class="style1">
+					<span class="image">
+						<img src="images/evento1.png" alt="Imagen evento">
+					</span>
+					<a href="/evento">
+						
+						<div class="content">
+							<h2 style="color: white;">Hablemos de FrontEnd</h2>
+							<p><strong>Fecha:</strong>Lunes, 20 de abril</p>
+							<p><strong>Hora:</strong>06:00 P.M.</p>
+						</div>
+					</a>
+				</article>
+				<article class="style2">
+					<span class="image">
+						<img src="images/pic02.jpg" alt="" />
+					</span>
+					<a href="/evento">
+						<h2>Lorem</h2>
+						<div class="content">
+							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+						</div>
+					</a>
+				</article>
+				<article class="style3">
+					<span class="image">
+						<img src="images/pic03.jpg" alt="" />
+					</span>
+					<a href="/evento">
+						<h2>Feugiat</h2>
+						<div class="content">
+							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+						</div>
+					</a>
+				</article>
+				<article class="style4">
+					<span class="image">
+						<img src="images/pic04.jpg" alt="" />
+					</span>
+					<a href="/evento">
+						<h2>Tempus</h2>
+						<div class="content">
+							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+						</div>
+					</a>
+				</article>
+				<article class="style5">
+					<span class="image">
+						<img src="images/pic05.jpg" alt="" />
+					</span>
+					<a href="/evento">
+						<h2>Aliquam</h2>
+						<div class="content">
+							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+						</div>
+					</a>
+				</article>
+				<article class="style6">
+					<span class="image">
+						<img src="images/pic06.jpg" alt="" />
+					</span>
+					<a href="/evento">
+						<h2>Veroeros</h2>
+						<div class="content">
+							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+						</div>
+					</a>
+				</article>
+			</section>
+		</div>
 
-	</body>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Aliquam sed mauris</h2>
+				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
+					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
+					erat egestas velit, vitae tincidunt odio.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Contáctenos</h2>
+				<dl class="alt">
+					<dt>Dirección</dt>
+					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+					<dt>Télefono</dt>
+					<dd>(000) 000-0000 x 0000</dd>
+					<dt>Email</dt>
+					<dd><a href="#">information@untitled.tld</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/pubdev" target="_blank"
+							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/pubdev" target="_blank"
+							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+	<script src="assets/js/eventos.js"></script>
+
+</body>
+
 </html>
