--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -6,153 +6,209 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>PubDev</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
-		<meta name="author" content="Sebastian Roa Meneses">
-		<meta name="reply-to" content="Serome111@gmail.com">
-		<link rev="made" href="mailto:Serome111@gmail.com">
-		<meta name="description" content="Comunidad de aprendizaje de desarrolladores del huila">
-		<meta name="KEYWORDS" content="palabras clave">
-		<meta name="Resource-type" content="Index">
-		<meta name="Revisit-after" content="60 days">
-		<meta name="robots" content="follow"> 
-		<link rel="icon" href="images/icono_low.png">
-		<link rel="stylesheet" href="assets/css/salonFamas1.css" />
-		<!--Menu-->
-		<link rel="stylesheet" href="assets/css/menu.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+
+<head>
+	<title>PubDev</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="DC.Language" SCHEME="RFC1766" content="Spanish">
+	<meta name="author" content="Sebastian Roa Meneses">
+	<meta name="reply-to" content="Serome111@gmail.com">
+	<link rev="made" href="mailto:Serome111@gmail.com">
+	<meta name="description" content="Comunidad de aprendizaje de desarrolladores del huila">
+	<meta name="KEYWORDS" content="palabras clave">
+	<meta name="Resource-type" content="Index">
+	<meta name="Revisit-after" content="60 days">
+	<meta name="robots" content="follow">
+	<link rel="icon" href="images/icono_low.png">
+
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
 		<!-- Header -->
-					<header id="header">
-						<div class="inner">
+		<header id="header">
+			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
+			<h1>REGISTRO</h1>
+			<p>¡Únete a nuestra comunidad!</p>
+		</header>
+
+		<!-- Main -->
+		<div id="main">
+
+			<nav id="nav">
+				<ul>
+					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/eventos">EVENTOS</a></li>
+					<li><a href="#">CALENDARIO</a></li>
+					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="#">PATROCINADORES</a></li>
+				</ul>
+			</nav>
+
+			<!-- Content -->
+
+			<!-- Form -->
+			<section class="main">
+				<form id="formulario" method="post" action="/registro/form" enctype="multipart/form-data">
+					<div class="row gtr-uniform">
+						<h3>Información personal</h3>
+						<div class="col-12 col-12-xsmall">
+							<input type="text" name="nombre" id="name" placeholder="Nombre" required />
+						</div>
+						<div class="col-12 col-12-xsmall">
+							<input type="email" name="correo" id="email" placeholder="Correo" required />
+						</div>
+						<h3>Nickname</h3>
+						<div class="col-12 col-12-xsmall">
+							<input type="text" name="sobrenombre" id="subject" placeholder="Nickname" required />
+						</div>
+						<div class="col-12 col-12-xsmall">
+							<input type="password" name="contrasena1" id="pass1" placeholder="Contraseña" required />
+						</div>
+						<div class="col-12 col-12-xsmall">
+							<input type="password" name="contrasena2" id="pass2" placeholder="Confirma tu contraseña"
+								required />
+						</div>
+						<div class="col-4 col-12-smajlls">
+							<div class="col-4 col-12-smajlls" id="div_file">
+								<label class="file-upload icon solid fa-upload" for="fileup"> Subir Foto</label>
+								<input id="btn_enviar" type="file" accept="image/png, image/jpeg, image/jpg, image/png"
+									name="foto" class="file-upload " required multiple>
+							</div>
 							
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
+							
 						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="/">Inicio</a></li>
-							<li><a href="/eventos">Eventos</a></li>
-							<li><a href="">Calendario</a></li>
-							<li><a href="/salondefama">Salon de La Fama</a></li>
-						</ul>
-					</nav>
-
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>PubDev</h2>
-						<p>Registrate y uneta a nuestra comunidad.</p>
-					</header>
-					<div class="row">
+						<div class="col-8 col-12-smajlls" id="preview"></div>
+						
 						<div class="col-12">
-							<form id="formulario" method="post" action="/registro/form" enctype="multipart/form-data">
-								<div class="row">
-									<div class="col-12">
-										<input type="text" name="nombre" id="name" placeholder="Nombre" required/>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="email" name="correo" id="email" placeholder="Correo" required/>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="sobrenombre" id="subject" placeholder="sobre nombre" required/>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="password" name="contrasena1" id="pass1" placeholder="contraseña" required/>
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="password" name="contrasena2" id="pass2" placeholder="Confirma tu contraseña" required/>
-									</div>
-									<h3>Herramientas en las cuales tiene conocimiento</h3>
-									<div class="col-6 col-12-small">
-										 <select id="Back" name="BackEnd">
-										 	<option>Back-end</option>
-											<option>PHP</option>
-									  		<option>Python</option>
-									  		<option>Javascript</option>
-									  		<option>Typescript</option>
-									  		<option>Java</option>
-									  		<option>Ruby</option>
-									  		<option>C++</option>
-									  		<option>C</option>
-									  		<option>VSB(Macros Excel)</option>
-									  		<option>Otro</option>
-									  		</select>
-									</div>
+							<textarea name="message" required id="message"
+								placeholder="Una frase inspiradora que quieras memorar" rows="6"></textarea>
+						</div>
 
-									<div class="col-6 col-12-smajll">
-										 <select id="Front" name="FrontEnd">
-										 	<option>Front-End</option>
-										 	<option>HTML5</option>
-											<option>Bootstrap</option>
-									  		<option>CSS3</option>
-									  		<option>Fundation</option>
-									  		<option>Mustach</option>
-									  		<option>Angular</option>
-									  		<option>Material</option>
-									  		<option>Otro</option>
-									  		</select>
+						<h3>Habilidades</h3>
 
-									</div>
+						<div class="col-12">
+							<select id="Back" name="BackEnd">
+								<option>Back-end</option>
+								<option>PHP</option>
+								<option>Python</option>
+								<option>Javascript</option>
+								<option>Typescript</option>
+								<option>Java</option>
+								<option>Ruby</option>
+								<option>C++</option>
+								<option>C</option>
+								<option>VSB(Macros Excel)</option>
+								<option>Otro</option>
+							</select>
+						</div>
 
-									<div class="col-12 col-12-smajll file-upload">
-										<input  id="fileup" type="file" accept="image/png, image/jpeg, image/jpg, image/png" name="foto" class="file-upload " required multiple>
-										<label class="file-upload icon solid fa-upload" for="fileup"> Subir Foto</label>
-									</div>
-									<div class="col-12">
-										<textarea name="message" required id="message" placeholder="Una frase inspiradora que quieras memorar"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" id="btnRegistrarse" value="Registrarse" /></li>
-											<li><input type="reset" value="limpiar Formulario" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
+						<div class="col-12">
+							<select id="Front" name="FrontEnd">
+								<option>Front-End</option>
+								<option>HTML5</option>
+								<option>Bootstrap</option>
+								<option>CSS3</option>
+								<option>Fundation</option>
+								<option>Mustach</option>
+								<option>Angular</option>
+								<option>Material</option>
+								<option>Otro</option>
+							</select>
 						</div>
 						<div class="col-12">
-							<hr/>
-							<h3>Siguenos en ...</h3>
-							<ul class="social">
-								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<li><a href="https://www.facebook.com/pubdev" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://github.com/pubdevs" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.instagram.com/pubdev" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<ul class="actions">
+								<li><input type="submit" id="btnRegistrarse" value="Registrarse" /></li>
+								<li><input type="reset" value="Limpiar Formulario"
+										style="background-color: rgba(60, 178, 214, 0.658) ;" /></li>
 							</ul>
-							<hr />
 						</div>
 					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Hecho con el ❤️ <a href="https://torrentesoftware.com"></a></li>
-						</ul>
-					</footer>
-				</div>
-			</article>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/menu.js"></script>
-			<script src="assets/js/registro.js"></script>
-			<script src="assets/js/sweetalert2.js"></script>
 
-	</body>
+
+
+
+				</form>
+			</section>
+
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Aliquam sed mauris</h2>
+				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam
+					dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat
+					egestas velit, vitae tincidunt odio.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Etiam feugiat</h2>
+				<dl class="alt">
+					<dt>Address</dt>
+					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+					<dt>Phone</dt>
+					<dd>(000) 000-0000 x 0000</dd>
+					<dt>Email</dt>
+					<dd><a href="#">information@untitled.tld</a></dd>
+				</dl>
+				<ul class="icons">
+						<li><a href="https://twitter.com/pubdev01" target="_blank"
+								class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/pubdev" target="_blank"
+								class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/pubdev" target="_blank"
+								class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
+									class="label">GitHub</span></a></li>
+					</ul>
+			</section>
+		</footer>
+
+	</div>
+
+<!-- PREVISUALIZAR LA IMAGEN -->
+	<script>
+
+		document.getElementById("btn_enviar").onchange = function (e) {
+			let reader = new FileReader();
+
+			reader.onload = function () {
+				let preview = document.getElementById('preview'),
+					image = document.createElement('img');
+
+				image.src = reader.result;
+
+				preview.innerHTML = '';
+				preview.append(image);
+			};
+
+			reader.readAsDataURL(e.target.files[0]);
+		}
+
+	</script>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/registro.js"></script>
+
+</body>
+
 </html>
