--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -41,7 +41,7 @@
 		<div id="main">
 
 			<nav id="nav">
-				<ul>
+				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="#">CALENDARIO</a></li>
