--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2998,37 +2998,61 @@ body.is-preload #header.alt .logo {
 /* Nav */
 
 #nav {
-    -moz-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-    -webkit-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-    -ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-    transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-    background-color: #ffffff;
-    color: #000000;
-    position: absolute;
-    width: 64em;
-    font-weight: 600;
-    max-width: calc(100% - 4em);
-    padding: 1em;
-    background-color: #f7f7f7;
-    border-top-left-radius: 0.25em;
-    border-top-right-radius: 0.25em;
-    cursor: default;
-    text-align: center;
+    color: rgb(108, 206, 245);
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-transition: -moz-transform 1s ease, opacity 1s ease;
+    -webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
+    -ms-transition: -ms-transform 1s ease, opacity 1s ease;
+    transition: transform 1s ease, opacity 1s ease;
+    background: #0d2e3c;
+    height: 4rem;
+    line-height: 4rem;
+    overflow: hidden;
+    padding: 0 2rem 0 0;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+#nav ul.divided li {
+    border-top-color: #ffffff;
+}
+
+#nav ul.icons li a.icon:hover:before {
+    color: #18bfef;
+}
+
+#nav ul.icons.alt li .icon:before {
+    box-shadow: inset 0 0 0 2px #ffffff;
+}
+
+#nav ul.icons.alt li a.icon:hover:before {
+    box-shadow: inset 0 0 0 2px #18bfef;
 }
 
 #nav input,
 #nav select,
 #nav textarea {
-    color: #636363;
+    color: #ffffff;
+}
+
+#nav a {
+    color: #ffffff;
+    border-bottom-color: rgba(255, 255, 255, 0.5);
 }
 
 #nav a:hover {
-    color: #1f9fb6;
+    border-bottom-color: transparent;
+    color: #18bfef !important;
 }
 
 #nav strong,
 #nav b {
-    color: #636363;
+    color: #ffffff;
 }
 
 #nav h1,
@@ -3037,90 +3061,92 @@ body.is-preload #header.alt .logo {
 #nav h4,
 #nav h5,
 #nav h6 {
-    color: #636363;
+    color: #ffffff;
 }
 
 #nav blockquote {
-    border-left-color: #dddddd;
+    border-left-color: #ffffff;
 }
 
 #nav code {
-    background: rgba(222, 222, 222, 0.25);
-    border-color: #dddddd;
+    background: rgba(255, 255, 255, 0.075);
+    border-color: #ffffff;
 }
 
 #nav hr {
-    border-bottom-color: #dddddd;
+    border-bottom-color: #ffffff;
 }
 
-#nav+#main {
-    padding-top: 4.25em;
-}
-
-#nav ul {
-    margin: 0;
-    padding: 0;
+#nav ul.links {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-grow: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-grow: 1;
+    flex-grow: 1;
+    -moz-flex-shrink: 1;
+    -webkit-flex-shrink: 1;
+    -ms-flex-shrink: 1;
+    flex-shrink: 1;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+    letter-spacing: 0.075em;
     list-style: none;
+    margin-bottom: 0;
+    padding-left: 0;
+    text-transform: uppercase;
 }
 
-#nav ul li {
-    -moz-transition: margin 0.2s ease;
-    -webkit-transition: margin 0.2s ease;
-    -ms-transition: margin 0.2s ease;
-    transition: margin 0.2s ease;
-    display: inline-block;
-    margin: 0 0.35em;
-    padding: 0;
-    vertical-align: middle;
+#nav ul.links li {
+    display: block;
+    padding-left: 0;
 }
 
-#nav ul li a {
-    -moz-transition: font-size 0.2s ease;
-    -webkit-transition: font-size 0.2s ease;
-    -ms-transition: font-size 0.2s ease;
-    transition: font-size 0.2s ease;
-    display: inline-block;
-    height: 2.25em;
-    line-height: 2.25em;
-    padding: 0 1.25em;
-    border: 0;
-    border-radius: 8px;
-    box-shadow: inset 0 0 0 1px transparent;
+#nav ul.links li a {
+    -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    display: block;
+    font-size: 0.8rem;
+    outline: none;
+    padding: 0 2rem;
 }
 
-#nav ul li a:hover {
-    background-color: rgba(222, 222, 222, 0.25);
+#nav ul.links li a:hover {
+    color: inherit !important;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
-#nav ul li a.active {
+#nav ul.links li.active {
     background-color: #ffffff;
-    box-shadow: none;
 }
 
-#nav.alt {
-    position: fixed;
-    top: 0;
-    padding: 0.5em 1em;
-    background-color: rgba(247, 247, 247, 0.95);
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    z-index: 10000;
+#nav ul.links li.active a {
+    color: #1e252d;
 }
 
-#nav.alt ul li {
-    margin: 0 0.175em;
+#nav ul.links li.active a:hover {
+    color: #18bfef !important;
 }
 
-#nav.alt ul li a {
-    font-size: 0.9em;
+#nav ul.icons {
+    -moz-flex-grow: 0;
+    -webkit-flex-grow: 0;
+    -ms-flex-grow: 0;
+    flex-grow: 0;
+    -moz-flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+    -ms-flex-shrink: 0;
+    flex-shrink: 0;
+    margin-bottom: 0;
 }
 
-@media screen and (max-width: 736px) {
+@media screen and (max-width: 980px) {
     #nav {
         display: none;
-    }
-    #nav+#main {
-        padding-top: 0;
     }
 }
 
@@ -3608,4 +3634,197 @@ input#btn_enviar {
     max-width: 200px;
     max-height: 200px;
     display: block;
+}
+
+
+/* Nav Panel */
+
+#navPanelToggle {
+    text-decoration: none;
+    -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    display: none;
+    position: fixed;
+    top: 0.75rem;
+    right: 0.75rem;
+    border: 0;
+    color: #ffffff;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-size: 0.9rem;
+    font-weight: 900;
+    letter-spacing: 0.075em;
+    padding: 0.375rem 1.25rem;
+    text-transform: uppercase;
+    z-index: 10001;
+}
+
+#navPanelToggle:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    text-transform: none !important;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+}
+
+#navPanelToggle:before {
+    content: '\f0c9';
+    margin-right: 0.5rem;
+}
+
+#navPanelToggle.alt {
+    background-color: rgba(255, 255, 255, 0.875);
+    box-shadow: 0 0.125rem 0.75rem 0 rgba(30, 37, 45, 0.25);
+    color: #212931;
+}
+
+#navPanelToggle.alt:hover {
+    background-color: #0d2e3c;
+}
+
+@media screen and (max-width: 980px) {
+    #navPanelToggle {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 736px) {
+    #navPanelToggle {
+        font-size: 0.8rem;
+        padding: 0.25rem 1rem;
+    }
+}
+
+#navPanel {
+    -moz-transform: translateX(20rem);
+    -webkit-transform: translateX(20rem);
+    -ms-transform: translateX(20rem);
+    transform: translateX(20rem);
+    -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
+    -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
+    -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
+    transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
+    display: none;
+    -webkit-overflow-scrolling: touch;
+    background: #0d2e3c;
+    box-shadow: none;
+    color: #ffffff;
+    height: 100%;
+    max-width: 80%;
+    overflow-y: auto;
+    padding: 3rem 2rem;
+    position: fixed;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    width: 20rem;
+    z-index: 10002;
+}
+
+#navPanel .links {
+    list-style: none;
+    padding-left: 0;
+}
+
+#navPanel .links li {
+    border-top: solid 2px #eeeeee;
+}
+
+#navPanel .links li a {
+    border-bottom: 0;
+    display: block;
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-size: 0.9rem;
+    font-size: 0.9rem;
+    font-weight: 900;
+    letter-spacing: 0.075em;
+    padding: 0.75rem 0;
+    text-transform: uppercase;
+}
+
+#navPanel .links li:first-child {
+    border-top: 0;
+}
+
+#navPanel .close {
+    text-decoration: none;
+    -moz-transition: color 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    border: 0;
+    color: #909498;
+    cursor: pointer;
+    display: block;
+    height: 3.25rem;
+    line-height: 3.25rem;
+    padding-right: 1.25rem;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+    vertical-align: middle;
+    width: 7rem;
+}
+
+#navPanel .close:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    text-transform: none !important;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+}
+
+#navPanel .close:before {
+    content: '\f00d';
+    font-size: 1.25rem;
+}
+
+#navPanel .close:hover {
+    color: #212931;
+}
+
+@media screen and (max-width: 736px) {
+    #navPanel .close {
+        height: 4rem;
+        line-height: 4rem;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    #navPanel {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 736px) {
+    #navPanel {
+        padding: 2.5rem 1.75rem;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    body.is-navPanel-visible #wrapper {
+        opacity: 0.5;
+    }
+    body.is-navPanel-visible #navPanel {
+        -moz-transform: translateX(0);
+        -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+        transform: translateX(0);
+        box-shadow: 0 0 1.5rem 0 rgba(0, 0, 0, 0.2);
+        visibility: visible;
+    }
 }
