--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,23 +26,26 @@
 	<title>PubDev</title>
 </head>
 
-<body>
+<body class="is-preload">
 
-	<body class="is-preload">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-		<!-- Wrapper -->
-		<div id="wrapper">
+		<!-- Header -->
+		<header id="header" class="alt">
+			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
+			<h1><strong>PubDev</strong></h1>
+			<p>Una comunidad sin animo de lucro</p>
+		</header>
 
-			<!-- Header -->
-			<header id="header" class="alt">
-				<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
-				<h1><strong>PubDev</strong></h1>
-				<p>Una comunidad sin animo de lucro</p>
-			</header>
+		<!-- Nav -->
 
-			<!-- Nav -->
+
+		<!-- Main -->
+		<div id="main">
+
 			<nav id="nav">
-				<ul>
+				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="#">CALENDARIO</a></li>
@@ -51,188 +54,189 @@
 				</ul>
 			</nav>
 
-			<!-- Main -->
-			<div id="main">
-
-				<!-- Introduction -->
-				<section id="intro" class="main">
-					<div class="spotlight">
-						<div class="content">
-							<header class="major">
-								<h2>¿QUIÉNES SOMOS?</h2>
-							</header>
-							<p style="text-align: justify;">El objetivo de la comunidad PubDev es fortalecer las
-								aptitudes y actitudes de cada uno de sus integrantes en todos los temas que se
-								relacionen con tecnologías de la información. De igual forma la comunidad opta por la
-								generación
-								de charlas y recursos que fortalezcan la cultura digital en el país y la región. Vamos a
-								crecer, compartir conocimientos y empezar a desarrollar una nueva manera de pensar en
-								torno a las tecnologías de la información</p>
-							<ul class="actions">
-								<li><a href="/registro" class="button">Registrate</a></li>
-							</ul>
-						</div>
-						<span class="image"><img src="images/logo.png" alt="" /></span>
+			<!-- Introduction -->
+			<section id="intro" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>¿QUIÉNES SOMOS?</h2>
+						</header>
+						<p style="text-align: justify;">El objetivo de la comunidad PubDev es fortalecer las
+							aptitudes y actitudes de cada uno de sus integrantes en todos los temas que se
+							relacionen con tecnologías de la información. De igual forma la comunidad opta por la
+							generación
+							de charlas y recursos que fortalezcan la cultura digital en el país y la región. Vamos a
+							crecer, compartir conocimientos y empezar a desarrollar una nueva manera de pensar en
+							torno a las tecnologías de la información</p>
+						<ul class="actions">
+							<li><a href="/registro" class="button">Registrate</a></li>
+						</ul>
 					</div>
-				</section>
+					<span class="image"><img src="images/logo.png" alt="" /></span>
+				</div>
+			</section>
 
-				<!-- EVENTOS -->
-				<section id="first" class="main special">
-					<header class="major">
-						<h2>EVENTOS RECIENTES</h2>
-					</header>
-					<ul class="features">
-						<li>
-							<div class="card" style="width: 18rem; height: 28rem;">
-								<img src="images/evento1.png" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h3><strong> Primer Webinar de PubDev</strong></h3>
-									<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
-										<strong>Hora</strong>: 06:00 P.M.</h4>
-									<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
-										Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
-								</div>
+			<!-- EVENTOS -->
+			<section id="first" class="main special">
+				<header class="major">
+					<h2>EVENTOS RECIENTES</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<div class="card" style="width: 18rem; height: 28rem;">
+							<img src="images/evento1.png" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h3><strong> Primer Webinar de PubDev</strong></h3>
+								<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
+									<strong>Hora</strong>: 06:00 P.M.</h4>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
+									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
 							</div>
-						</li>
-						<li>
-							<div class="card" style="width: 18rem; height: 28rem;">
-								<img src="images/evento1.png" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h3><strong> Primer Webinar de PubDev</strong></h3>
-									<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
-										<strong>Hora</strong>: 06:00 P.M.</h4>
-									<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
-										Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
-								</div>
+						</div>
+					</li>
+					<li>
+						<div class="card" style="width: 18rem; height: 28rem;">
+							<img src="images/evento1.png" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h3><strong> Primer Webinar de PubDev</strong></h3>
+								<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
+									<strong>Hora</strong>: 06:00 P.M.</h4>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
+									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
 							</div>
-						</li>
-						<li>
-							<div class="card" style="width: 18rem; height: 28rem;">
-								<img src="images/evento1.png" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h3><strong> Primer Webinar de PubDev</strong></h3>
-									<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
-										<strong>Hora</strong>: 06:00 P.M.</h4>
-									<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
-										Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
-								</div>
+						</div>
+					</li>
+					<li>
+						<div class="card" style="width: 18rem; height: 28rem;">
+							<img src="images/evento1.png" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h3><strong> Primer Webinar de PubDev</strong></h3>
+								<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
+									<strong>Hora</strong>: 06:00 P.M.</h4>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
+									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
 							</div>
-						</li>
+						</div>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="/eventos" class="button">Ver más</a></li>
 					</ul>
-					<footer class="major">
-						<ul class="actions special">
-							<li><a href="/eventos" class="button">Ver más</a></li>
-						</ul>
-					</footer>
-				</section>
+				</footer>
+			</section>
 
-				<!-- CALENDARIO -->
-				<section id="second" class="main special">
-					<header class="major">
-						<h2>CALENDARIO</h2>
-						<p>En construcción...</p>
-					</header>
-					<img src="images/calendar-3170987.png" alt="..." style="width: 50%;">
-					<footer class="major">
-						<ul class="actions special">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</footer>
-				</section>
+			<!-- CALENDARIO -->
+			<section id="second" class="main special">
+				<header class="major">
+					<h2>CALENDARIO</h2>
+					<p>En construcción...</p>
+				</header>
+				<img src="images/calendar-3170987.png" alt="..." style="width: 50%;">
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="#" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
 
-				<!-- SALON DE LA FAMA -->
-				<section id="cta" class="main special">
-					<header class="major">
-						<h2>SALÓN DE LA FAMA</h2>
-						<p>Conviertete en la persona más reconocida de PubDev</p>
-					</header>
-					<footer class="major">
-						<ul class="actions special">
-							<li><a href="/registro" class="button primary">¡Quiero unirme!</a></li>
-							<li><a href="/salondefama" class="button">Leer más</a></li>
-						</ul>
-					</footer>
-				</section>
+			<!-- SALON DE LA FAMA -->
+			<section id="cta" class="main special">
+				<header class="major">
+					<h2>SALÓN DE LA FAMA</h2>
+					<p>Conviertete en la persona más reconocida de PubDev</p>
+				</header>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="/registro" class="button primary">¡Quiero unirme!</a></li>
+						<li><a href="/salondefama" class="button">Leer más</a></li>
+					</ul>
+				</footer>
+			</section>
 
-				<!-- PATROCINADORES -->
-				<section id="ptc" class="main special">
-					<header class="major">
-						<h2>PATROCINADORES</h2>
-						<p>Empresas que nos patrocinan</p>
-					</header>
-					<ul class="features">
-						<li>
-							<div class="card" style="width: 18rem; height: 18rem;">
-								<img src="images/sponsors/TorrenteBlack.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
-									<p class="card-text"><h2><strong><a href="https://TorrenteSoftware.com">Torrente
-												Software</a></strong></h2></p>
-								</div>
+			<!-- PATROCINADORES -->
+			<section id="ptc" class="main special">
+				<header class="major">
+					<h2>PATROCINADORES</h2>
+					<p>Empresas que nos patrocinan</p>
+				</header>
+				<ul class="features">
+					<li>
+						<div class="card" style="width: 18rem; height: 18rem;">
+							<img src="images/sponsors/TorrenteBlack.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<p class="card-text">
+									<h2><strong><a href="https://TorrenteSoftware.com">Torrente
+												Software</a></strong></h2>
+								</p>
 							</div>
-						</li>
-						<li>
-							<div class="card" style="width: 18rem; height: 18rem;">
-								<img src="images/computer.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
-									<p class="card-text"><h2><strong>Corsi</strong></h2></p>
-								</div>
+						</div>
+					</li>
+					<li>
+						<div class="card" style="width: 18rem; height: 18rem;">
+							<img src="images/computer.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<p class="card-text">
+									<h2><strong>Corsi</strong></h2>
+								</p>
 							</div>
-						</li>
+						</div>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="#" class="button primary">¡Quiero patrocinarlos!</a></li>
+						<li><a href="#" class="button">Leer más</a></li>
 					</ul>
-					<footer class="major">
-						<ul class="actions special">
-							<li><a href="#" class="button primary">¡Quiero patrocinarlos!</a></li>
-							<li><a href="#" class="button">Leer más</a></li>
-						</ul>
-					</footer>
-				</section>
-			</div>
-
-			<!-- Footer -->
-			<footer id="footer">
-				<section>
-					<h2>Aliquam sed mauris</h2>
-					<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-						etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-						erat egestas velit, vitae tincidunt odio.</p>
-					<ul class="actions">
-						<li><a href="#l" class="button">Learn More</a></li>
-					</ul>
-				</section>
-				<section>
-					<h2>Contáctenos</h2>
-					<dl class="alt">
-						<dt>Dirección</dt>
-						<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-						<dt>Télefono</dt>
-						<dd>(000) 000-0000 x 0000</dd>
-						<dt>Email</dt>
-						<dd><a href="#">information@untitled.tld</a></dd>
-					</dl>
-					<ul class="icons">
-						<li><a href="https://twitter.com/pubdev01" target="_blank"
-								class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/pubdev" target="_blank"
-								class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/pubdev" target="_blank"
-								class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-									class="label">GitHub</span></a></li>
-					</ul>
-				</section>
-
-			</footer>
-
+				</footer>
+			</section>
 		</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-	</body>
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Aliquam sed mauris</h2>
+				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
+					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
+					erat egestas velit, vitae tincidunt odio.</p>
+				<ul class="actions">
+					<li><a href="#l" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Contáctenos</h2>
+				<dl class="alt">
+					<dt>Dirección</dt>
+					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+					<dt>Télefono</dt>
+					<dd>(000) 000-0000 x 0000</dd>
+					<dt>Email</dt>
+					<dd><a href="#">information@untitled.tld</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/pubdev" target="_blank"
+							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/pubdev" target="_blank"
+							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+</body>
 
 </html>
