--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -34,8 +34,6 @@
 
 		<!-- Header -->
 		<header id="header">
-			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
-
 			<h1>EVENTOS</h1><br />
 			<p>Cada día contribuimos a que existan más personas en el area de la tecnología y desarrollo de software con
 				una visión diferente para el mundo, pensando siempre en la reducción de brechas de género, desigualdades
@@ -48,10 +46,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="#">CALENDARIO</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="#">PATROCINADORES</a></li>
+					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
@@ -66,29 +64,34 @@
 								<div class="grid-item">6 <br> Participantes</div>
 							</div>
 						</header>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Conocer más...</a></li>
-						</ul>
+						</ul> -->
 					</div>
-					<span class="image"><img src="images/rick.gif" alt="" /></span>
+					<span class="image"><img src="images/evento2.jpg" alt="" /></span>
 				</div>
-			</section>
 
-			<section id="content" class="tiles main">
-				<article class="style1">
-					<span class="image">
-						<img src="images/evento1.png" alt="Imagen evento">
-					</span>
-					<a href="/evento">
-						
-						<div class="content">
-							<h2 style="color: white;">Hablemos de FrontEnd</h2>
-							<p><strong>Fecha:</strong>Lunes, 20 de abril</p>
-							<p><strong>Hora:</strong>06:00 P.M.</p>
-						</div>
-					</a>
-				</article>
-				<article class="style2">
+				<header class="major">
+					<h2>Próximos eventos</h2>
+				</header>
+
+				<section id="content" class="tiles">
+
+
+					<article class="style1">
+						<span class="image">
+							<img src="images/evento1.png" alt="Imagen evento">
+						</span>
+						<a href="/evento">
+
+							<div class="content">
+								<h2 style="color: white;">Hablemos de FrontEnd</h2>
+								<p><strong>Fecha:</strong>Lunes, 20 de abril</p>
+								<p><strong>Hora:</strong>06:00 P.M.</p>
+							</div>
+						</a>
+					</article>
+					<!-- <article class="style2">
 					<span class="image">
 						<img src="images/pic02.jpg" alt="" />
 					</span>
@@ -142,32 +145,20 @@
 							<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 						</div>
 					</a>
-				</article>
+				</article> -->
+				</section>
 			</section>
 		</div>
 
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-					erat egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+			<section style="align-items: center;">
+				<header class="major"><h2>Nuestras redes sociales</h2></header>
+				
+				
 			</section>
-			<section>
-				<h2>Contáctenos</h2>
-				<dl class="alt">
-					<dt>Dirección</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Télefono</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
+			<section style="align-items: center;">
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -175,11 +166,10 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
 			</section>
-
 		</footer>
 
 	</div>
