--- a/views/forbidden.hbs
+++ b/views/forbidden.hbs
@@ -58,25 +58,12 @@
 			
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-					erat egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#l" class="button">Learn More</a></li>
-				</ul>
+			<section style="align-items: center;">
+				<header class="major"><h2>Nuestras redes sociales</h2></header>
+				
+				
 			</section>
-			<section>
-				<h2>Contáctenos</h2>
-				<dl class="alt">
-					<dt>Dirección</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Télefono</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
+			<section style="align-items: center;">
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -84,11 +71,10 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
 			</section>
-
 		</footer>
 
 	</div>
