--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -43,10 +43,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="#">CALENDARIO</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="#">PATROCINADORES</a></li>
+					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
@@ -71,39 +71,30 @@
 
 		</div>
 
-		<!-- Footer -->
+		<!--Footer-->
 		<footer id="footer">
-			<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam
-					dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat
-					egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+			<section style="align-items: center;">
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
+			</section>
+			<section style="align-items: center;">
+				<ul class="icons">
+					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/pubdev" target="_blank"
+							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/pubdev" target="_blank"
+							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
 			</section>
-			<section>
-				<h2>Etiam feugiat</h2>
-				<dl class="alt">
-					<dt>Address</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Phone</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
-				<ul class="icons">
-						<li><a href="https://twitter.com/pubdev01" target="_blank"
-								class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/pubdev" target="_blank"
-								class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/pubdev" target="_blank"
-								class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-									class="label">GitHub</span></a></li>
-					</ul>
-			</section>
 		</footer>
+
+	</div>
 	</div>
 
 	<!-- Scripts -->
