--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,10 +47,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="#">CALENDARIO</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="#">PATROCINADORES</a></li>
+					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
@@ -72,7 +72,7 @@
 							<li><a href="/registro" class="button">Registrate</a></li>
 						</ul>
 					</div>
-					<span class="image"><img src="images/logo.png" alt="" /></span>
+					<!-- <span class="image"><img src="images/logo.png" alt="" /></span> -->
 				</div>
 			</section>
 
@@ -82,7 +82,20 @@
 					<h2>EVENTOS RECIENTES</h2>
 				</header>
 				<ul class="features">
-					<li>
+					<li><a href="/evento" style="text-decoration:none;">
+							<div class="card" style="width: 18rem; height: 28rem;">
+								<img src="images/evento1.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h3><strong> Primer Webinar de PubDev</strong></h3>
+									<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
+										<strong>Hora</strong>: 06:00 P.M.</h4>
+									<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
+										Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
+								</div>
+							</div>
+						</a>
+					</li>
+					<!-- <li>
 						<div class="card" style="width: 18rem; height: 28rem;">
 							<img src="images/evento1.png" class="card-img-top" alt="...">
 							<div class="card-body">
@@ -105,19 +118,7 @@
 									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
 							</div>
 						</div>
-					</li>
-					<li>
-						<div class="card" style="width: 18rem; height: 28rem;">
-							<img src="images/evento1.png" class="card-img-top" alt="...">
-							<div class="card-body">
-								<h3><strong> Primer Webinar de PubDev</strong></h3>
-								<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
-									<strong>Hora</strong>: 06:00 P.M.</h4>
-								<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
-									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
-							</div>
-						</div>
-					</li>
+					</li> -->
 				</ul>
 				<footer class="major">
 					<ul class="actions special">
@@ -126,7 +127,7 @@
 				</footer>
 			</section>
 
-			<!-- CALENDARIO -->
+			<!-- CALENDARIO 
 			<section id="second" class="main special">
 				<header class="major">
 					<h2>CALENDARIO</h2>
@@ -138,7 +139,7 @@
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</footer>
-			</section>
+			</section> -->
 
 			<!-- SALON DE LA FAMA -->
 			<section id="cta" class="main special">
@@ -183,18 +184,18 @@
 						</div>
 					</li>
 				</ul>
-				<footer class="major">
+				<!-- <footer class="major">
 					<ul class="actions special">
 						<li><a href="#" class="button primary">¡Quiero patrocinarlos!</a></li>
 						<li><a href="#" class="button">Leer más</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 			</section>
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<section>
+			<!--<section>
 				<h2>Aliquam sed mauris</h2>
 				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
 					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
@@ -212,7 +213,9 @@
 					<dd>(000) 000-0000 x 0000</dd>
 					<dt>Email</dt>
 					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
+				</dl> -->
+			<section style="align-items: center;">
+				<h2>Nuestras redes sociales</h2>
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -220,11 +223,14 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li>
+					<!--<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li> -->
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
-			</section>
 
+				<h4 class="right">Hecho con el ♥</h4>
+			</section>
 		</footer>
 
 	</div>
