--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -34,7 +34,6 @@
 
 		<!-- Header -->
 		<header id="header" >
-			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
 			<h1>REGISTRO</h1>
 			<p>¡Únete a nuestra comunidad!</p>
 		</header>
@@ -46,10 +45,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="#">CALENDARIO</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="#">PATROCINADORES</a></li>
+					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
@@ -83,8 +82,9 @@
 						<div class="col-4 col-12-smajlls">
 							<div class="col-4 col-12-smajlls" id="div_file">
 								<label class="file-upload icon solid fa-upload" for="fileup"> Subir Foto</label>
-								<input id="btn_enviar" type="file" accept="image/png, image/jpeg, image/jpg, image/png"
-									name="foto" class="file-upload " required multiple>
+								<input id="btn_enviar" type="file" accept="image/png, 
+								image/jpeg, image/jpg, image/png" name="foto" 
+								class="file-upload " required multiple>
 							</div>
 
 
@@ -135,38 +135,22 @@
 							</ul>
 						</div>
 					</div>
-
-
-
-
-
 				</form>
 			</section>
 
 
 		</div>
 
-		<!-- Footer -->
+		<!--Footer-->
 		<footer id="footer">
-			<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam
-					dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat
-					egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+			<section style="align-items: center;">
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
 			</section>
-			<section>
-				<h2>Etiam feugiat</h2>
-				<dl class="alt">
-					<dt>Address</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Phone</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
+			<section style="align-items: center;">
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -174,11 +158,13 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
 			</section>
 		</footer>
+
+	</div>
 
 	</div>
 
