--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -21,7 +21,6 @@
 	<meta name="Revisit-after" content="60 days">
 	<meta name="robots" content="follow">
 	<link rel="icon" href="images/icono_low.png">
-	<link rel="stylesheet" href="assets/css/salonFamas1.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -34,8 +33,6 @@
 
 		<!-- Header -->
 		<header id="header">
-			<span class="logo"><img src="images/logo01.png" style="width: 300px;" alt="Logo PubDev" /></span>
-
 			<h1>SALÓN DE LA FAMA</h1>
 			<p>Alcanza el primer lugar del salón de la fama de PubDev</p>
 		</header>
@@ -46,10 +43,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/" class="active">INICIO</a></li>
+					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
-					<li><a href="#">CALENDARIO</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
-					<li><a href="#">PATROCINADORES</a></li>
+					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
@@ -77,6 +74,7 @@
 					<table>
 						<thead>
 							<tr>
+								<th></th>
 								<th>Nombre</th>
 								<th>Frase</th>
 								<th>Puntos</th>
@@ -90,27 +88,16 @@
 
 		</div>
 
-		<!-- Footer -->
+		<!--Footer-->
 		<footer id="footer">
-			<section>
-				<h2>Aliquam sed mauris</h2>
-				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus
-					etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula
-					erat egestas velit, vitae tincidunt odio.</p>
-				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+			<section style="align-items: center;">
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
 			</section>
-			<section>
-				<h2>Contáctenos</h2>
-				<dl class="alt">
-					<dt>Dirección</dt>
-					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-					<dt>Télefono</dt>
-					<dd>(000) 000-0000 x 0000</dd>
-					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
-				</dl>
+			<section style="align-items: center;">
 				<ul class="icons">
 					<li><a href="https://twitter.com/pubdev01" target="_blank" class="icon brands fa-twitter alt"><span
 								class="label">Twitter</span></a></li>
@@ -118,11 +105,10 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
-								class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-telegram alt"><span
+								class="label">Telegram</span></a></li>
 				</ul>
 			</section>
-
 		</footer>
 
 	</div>
