Revert "Correpcion de ortografia en algunas plaabras"
This reverts commit 9fec8b3784df23d17d9a0c782d763d836688bda0.

--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -76,7 +76,7 @@
 							<table>
 								<thead>
 									<tr>
-										<th>Nombre</th>
+										<th>Nmbre</th>
 										<th>Frase</th>
 										<th>Puntos</th>
 										
