--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -36,10 +36,6 @@ body {
 	line-height: 1;
 }
 
-#titulo_principal{
-	align: center;
-}
-
 ol, ul {
 	list-style: none;
 }
@@ -2609,7 +2605,7 @@ input, select, textarea {
 		left: 0;
 		padding: 8em 4em;
 		position: fixed;
-		/*text-align: center;*/
+		text-align: right;
 		top: 0;
 		width: 35%;
 	}
@@ -2623,7 +2619,6 @@ input, select, textarea {
 		}
 
 		#header > .inner {
-			align-items: center;
 			-moz-flex-grow: 1;
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
