--- a/views/admIndex.hbs
+++ b/views/admIndex.hbs
@@ -17,10 +17,11 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading"><img src="images/logo.png" alt="50" width="50"> <a href="/admpubdevindex">administrador</a></div>
       <div class="list-group list-group-flush">
-        <a href="/admpubdevcreareventos" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
+        <a href="/sudo/crear-evento" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
-        <a href="/admpubdevverusuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a href="/sudo/ver-usuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a href="/sudo/cerrar-session" class="list-group-item list-group-item-action bg-light">Cerrar session</a>
       </div>
     </div>
     <div id="page-content-wrapper">
