--- a/views/admVerUsuarios.hbs
+++ b/views/admVerUsuarios.hbs
@@ -7,18 +7,19 @@
   <meta name="author" content="">
 
   <title>Admin Pubdev</title>
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/css/simple-sidebar.css" rel="stylesheet">
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/css/simple-sidebar.css" rel="stylesheet">
 </head>
 <body>
   <div class="d-flex" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading"><img src="images/logo.png" alt="50" width="50"> <a href="/admpubdevindex">administrador</a></div>
+      <div class="sidebar-heading"><img src="../images/logo.png" alt="50" width="50"> <a href="/sudo">administrador</a></div>
       <div class="list-group list-group-flush">
-        <a href="/admpubdevcreareventos" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
+        <a href="/sudo/crear-evento" class="list-group-item list-group-item-action bg-light">Crear eventos</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver eventos realizados</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ver proximos eventos</a>
-        <a href="/admpubdevverusuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a href="/sudo/ver-usuarios" class="list-group-item list-group-item-action bg-light">Ver usuarios</a>
+        <a href="/sudo/cerrar-session" class="list-group-item list-group-item-action bg-light">Cerrar session</a>
       </div>
     </div>
     <div id="page-content-wrapper">
@@ -47,10 +48,10 @@
          
     </div>
   </div>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/admverusuarios.js"></script>
-  <script src="assets/js/sweetalert2.js"></script>
+  <script src="../assets/js/jquery.min.js"></script>
+  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/admverusuarios.js"></script>
+  <script src="../assets/js/sweetalert2.js"></script>
   <script>
     $("#menu-toggle").click(function(e) {
       e.preventDefault();
